# clinic-registry-backend

./: .env.testing.example  .gitignore  1  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.github/workflows/: docker-image-build.yml  tests.yml
alembic/: env.py
alembic/versions/: 39ed9e8781cd_add_procedures_dictionary.py  58ef0be65cb2_add_patients_table.py  5d085590d409_add_procedure_categories_dictionary.py  6fd42c884acb_add_search_indexes_for_logs_users_patients.py  a4f54e85dca3_add_logs_table.py  c8e9c955838a_add_records_table.py  f4cb16d8bb59_add_users_table.py
clinic_registry/: __main__.py  settings.py
clinic_registry/api/: app.py
clinic_registry/api/dependencies/: auth.py  common.py  dashboard.py  log.py  medical_record.py  patient.py  procedure.py  procedure_category.py  user.py
clinic_registry/api/mappers/: __init__.py  auth.py  medical_record.py  patient.py  procedure.py  procedure_category.py  user.py
clinic_registry/api/routers/: auth.py  dashboard.py  log.py  medical_record.py  metrics.py  patient.py  (+3 more)
clinic_registry/db/: models.py
clinic_registry/logging/: __init__.py  config.py
clinic_registry/metrics/: __init__.py  collectors.py  middleware.py  utils.py
scripts/: dev.sh  prod.sh
tests/: __init__.py  config.py  conftest.py  test_migrations.py
tests/e2e/: conftest.py  test_auth.py  test_dashboard.py  test_logs.py  test_medical_records.py  test_metrics.py  test_patients.py  test_procedure_categories.py  test_procedures.py  test_users.py
(+60 files in other folders)
